# spicedb-client

./: Cargo.toml  README.md
.devcontainer/: bootstrap.yaml  devcontainer.json  docker-compose.yaml
spicedb-client/: Cargo.toml
spicedb-client/src/: client.rs  lib.rs  result.rs  stream.rs  types.rs
spicedb-client/src/builder/: mod.rs  permissions.rs
spicedb-client/src/reader/: schema.rs
spicedb-grpc/: Cargo.toml  README.md  buf.yaml
spicedb-grpc/src/: lib.rs
src/: lib.rs
