[workspace]
members = ["spicedb-client", "spicedb-grpc"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lunaetco/spicedb-grpc"
keywords = ["authzed", "grpc", "spicedb", "zed"]

[workspace.dependencies]
bytes = "1"
futures = { version = "0.3.30", default-features = false }
http = "1.1.0"
prost = "0.13.1"
prost-types = "0.13.1"
thiserror = "1.0"
tokio = "1"
tonic = { version = "0.12.1", default-features = false }
tonic-build = "0.12.1"
